--- a/css/style.css
+++ b/css/style.css
@@ -411,6 +411,7 @@ align-items: center;
     transform: scale(1.05);
 }
 
+
 .team-item-header{
     margin-top: 30px;
     font-weight: 500;
@@ -473,7 +474,7 @@ align-items: center;
     font-weight: 700;
     letter-spacing: 0.03em;
     text-decoration: none;
-
+    margin-bottom: 20px;
 }
 
 .logo > span {
