--- a/css/style.css
+++ b/css/style.css
@@ -231,6 +231,10 @@ li > .link-active, .header-menu a:hover, .header-menu a:focus{
     font-size: 14px;
 }
 
+.spacials{
+    padding-bottom: 0px;
+}
+
 li > .spacial-heading {
     text-transform: uppercase;
     font-weight: 700;
@@ -244,12 +248,15 @@ li > .spacial-heading {
     letter-spacing: 0.03em;
 }
 
+
 /*new*/
 .main-thing{
 
     display: flex;
     flex-direction: column;
     align-items: center;
+ 
+
 }
 
 
@@ -301,29 +308,56 @@ transition: all 0.3s ease;
     justify-content: space-around;
 }
   
-.portfolio-team {
+/* .portfolio-team {
+    margin-bottom: 30px;
+    margin-right: 30px;
+} */
+
+.portfolio-team:not(:nth-child(3n)) {
+    margin-right: 30px;
+}
+
+.portfolio-team:not(:nth-last-child(-n + 3)) {
     margin-bottom: 30px;
 }
-  
-.portfolio-item {
-    transition: all 0.3s ease;
+
+.project-info{
+
+    border-left: 1px solid #ECECEC;
+    border-right: 1px solid #ECECEC;
+    border-bottom: 1px solid #ECECEC;
 }
   
-.portfolio-item:hover {
+.portfolio-team {
+    transition: all 0.3s ease;
+    cursor: pointer;
+}
+  
+.portfolio-team:hover {
     transform: scale(1.05);
+    background: #ffffff;
+    box-shadow: 0px 1px 1px rgb(0 0 0 / 12%), 0px 4px 4px rgb(0 0 0 / 6%), 1px 4px 6px rgb(0 0 0 / 16%);
+}
+
+
+.portfolio-item{
+    display: block;
 }
   
 .team-heading {
-    margin: 20px 24px 4px 24px;
     letter-spacing: 0.06em;
     line-height: 2;
     font-size: 18px;
     font-weight: 700;
     color: var(--header-color);
+    padding-top: 20px;
+    padding-left: 24px;
+    padding-right: 24px;
 }
   
 .team-text {
     margin: 0 24px;
+    margin-bottom: 20px;
     font-size: 16px;
     line-height: 1.87;
     letter-spacing: 0.03em;
